--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0",
     "dayjs": "^1.10.2",
     "dom-parser": "^0.1.6",
+    "firebase-admin": "^9.2.0",
+    "firebase-functions": "^3.11.0",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
-    "eslint-config-google": "^0.14.0",
-    "firebase-functions-test": "^0.2.0"
+    "eslint-config-prettier": "^8.4.0",
+    "firebase-functions-test": "^0.2.0",
+    "prettier": "2.5.1"
   },
   "private": true
 }
